Fix alignment in 'Run Image' dialog
This value is set to '2' in `lib/form-layout.scss` but it is getting
broken often on sync. (last such case was 0c8e511)

Lets have custom overwrite rather than being super careful on library sync.

Closes #432

--- a/src/podman.scss
+++ b/src/podman.scss
@@ -627,6 +627,10 @@ table.drive-list td:nth-child(2) img {
     grid-template-columns: repeat(2, min-content);
 }
 
+.ct-form > [role=group] {
+    grid-template-columns: repeat(3, auto);
+}
+
 .run-image-dialog-actions .btn {
     padding: 0.25rem 0.75rem;
 }
